prevent layout shift due on no match

--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ body {
   width: 100%;
   min-height: 100%;
 }
+
+body {
+  overflow-y: scroll;
+}
+
 main {
   flex-grow: 1;
 }
